--- a/css/projects.css
+++ b/css/projects.css
@@ -1,4 +1,73 @@
 .w3-myfont {
    font-family: 'Qwigley', cursive}
 
-  
+   .bgimg-1 {
+       background-position: center;
+       background-size: cover;
+       background-image: url("/pix/digital_photography/lighthouse.png");
+       min-height: 100%;
+
+   }
+
+   .centered {
+       position: absolute;
+       top: 50%;
+       left: 50%;
+       transform: translate(-50%, -50%);
+   }
+
+   /* Dropdown Sidebar*/
+
+
+   .overlay {
+       height: 0%;
+       width: 100%;
+       position: fixed;
+       z-index: 1;
+       top: 0;
+       left: 0;
+       background-color: #4bbac1;
+       background-color: #4bbac1;
+       overflow-y: hidden;
+       transition: 0.5s;
+       opacity: .95;
+   }
+
+   .overlay-content {
+       position: relative;
+       top: 25%;
+       width: 100%;
+       margin-top: 30px;
+   }
+
+   .overlay a {
+       padding: 8px;
+       text-decoration: none;
+       font-size: 36px;
+       color: white;
+       display: block;
+       text-align: center;
+       transition: 0.3s;
+
+   }
+
+   .overlay a:hover, .overlay a:focus {
+       color: #f1f1f1;
+   }
+
+   .overlay .closebtn {
+       position: absolute;
+       top: 20px;
+       right: 45px;
+       font-size: 60px;
+   }
+
+   @media screen and (max-height: 450px) {
+     .overlay {overflow-y: auto;}
+     .overlay a {font-size: 20px}
+     .overlay .closebtn {
+       font-size: 40px;
+       top: 15px;
+       right: 35px;
+     }
+   }
