--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,4 @@
+
 .w3-myfont {
    font-family: 'Qwigley', cursive}
 
@@ -5,6 +6,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 body, html {
     height: 100%;
     line-height: 1.8;
+    background-color: white;
 
 
 }
